--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calcuradora</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" >
+    <title>Calculadora</title>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet" >
     <link rel="stylesheet" href="index.css"> 
     <script src="Display.js" type="text/javascript"></script>
     <script src="Calculadora.js" type="text/javascript"></script>
     <script src="index.js" type="text/javascript" defer></script>
-
-
 </head>
 <body>
     <div class="container">
@@ -26,7 +24,7 @@
             <button class="numero">7</button>
             <button class="numero">8</button>
             <button class="numero">9</button>
-            <button class="operador" value="multiplicar">X</button>
+            <button class="operador" value="multiplicar">x</button>
             <button class="numero">4</button>
             <button class="numero">5</button>
             <button class="numero">6</button>
